# cart-opt

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ceneo_scraper.hpp  curl.hpp  skapiec_scraper.hpp  tidy.hpp  types.hpp
src/: ceneo_scraper.cpp  curl.cpp  skapiec_scraper.cpp  tidy.cpp  types.cpp
test/: sandbox.cpp
